set z-index: 99 to prevent textarea placeholder text from floating over navbar

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -9,6 +9,7 @@ nav {
   display: flex;
   padding-right: 1.5em;
   justify-content: space-between;
+  z-index: 99;
 }  
 
 nav .nav-logo {
